Basic demo working

--- a/game_client/pyproject.toml
+++ b/game_client/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["picows>=1.8.0", "pygame>=2.6.1", "ruff>=0.9.7"]
+dependencies = [
+ "pygame>=2.6.1",
+ "ruff>=0.9.7",
+ "websockets>=15.0",
+]
