added http server, sqlite and redis db

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ dependencies = [
     "websockets>=15.0",
     "picows>=1.8.0",
     "pydantic>=2.10.6",
+    "redis>=5.2.1",
+    "dotenv>=0.9.9",
+    "uvicorn>=0.34.0",
+    "fastapi>=0.115.11",
+    "sqlalchemy>=2.0.38",
 ]
 
 
