--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "fastapi>=0.115.11",
     "sqlalchemy>=2.0.38",
     "requests>=2.32.3",
+    "pyright>=1.1.396",
 ]
 
 [tool.uv]
