--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "game-client"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "pygame>=2.6.1",
     "ruff>=0.9.7",
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "requests>=2.32.3",
     "pyright>=1.1.396",
+    "protobuf>=5.27.3",
 ]
 
 [tool.uv]
